--- a/index.html
+++ b/index.html
@@ -5,150 +5,164 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+
 <head>
     <title>FAIRClinical</title>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"/>
-    <link href="assets/css/main.css" rel="stylesheet"/>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport" />
+    <link href="assets/css/main.css" rel="stylesheet" />
     <noscript>
-        <link href="assets/css/noscript.css" rel="stylesheet"/>
+        <link href="assets/css/noscript.css" rel="stylesheet" />
     </noscript>
 </head>
 <!-- Nav Bar-->
 <div class="topnav" id="nav">
     <a class="active" href="index.html">Home</a>
-    <a href="members.html">Team</a>
+    <a href="project.html">Project</a>
+    <a href="team.html">Team</a>
+    <a href="news.html">News</a>
     <a class="icon" href="javascript:void(0);" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
 </div>
+
 <body class="is-preload">
 
-<!-- Header -->
-<section id="header">
-    <div class="inner">
-        <img class="banner-logo" src="./images/Logo.png"/>
-    </div>
-</section>
+    <!-- Header -->
+    <section id="header">
+        <div class="inner">
+            <img class="banner-logo" src="./images/Logo.png" />
+        </div>
+    </section>
 
-<!-- One -->
-<section class="main style1" id="one">
-    <div class="container">
-        <div class="row gtr-150">
-            <div class="col-6 col-12-medium">
-                <header class="major">
-                    <h2>Aims</h2>
-                </header>
-                <p>FAIRClinical aims to improve the reuse of published clinical case report forms (CRFs) and enhance the FAIR-ness (Findability, Accessibility, Interoperability, Reuse) of supplementary data files in the biomedical literature.</p>
+    <!-- One -->
+    <section class="main style1" id="one">
+        <div class="container">
+            <div class="row gtr-150">
+                <div class="col-6 col-12-medium">
+                    <header class="major">
+                        <h2>Aims</h2>
+                    </header>
+                    <p>FAIRClinical aims to improve the reuse of published clinical case report forms (CRFs) and enhance
+                        the FAIR-ness (Findability, Accessibility, Interoperability, Reuse) of supplementary data files
+                        in the biomedical literature.</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Two -->
-<section class="main style2" id="two">
-    <div class="container">
-        <div class="row gtr-150">
-            <div class="col-6 col-12-medium">
-                <ul class="major-icons">
-                    <li><span class="icon solid style1 major fa-code"></span></li>
-                    <li><span class="icon solid style2 major fa-heartbeat"></span></li>
-                    <li><span class="icon solid style3 major fa-project-diagram"></span></li>
-                    <li><span class="icon solid style4 major fa-capsules"></span></li>
-                    <li><span class="icon solid style5 major fa-desktop"></span></li>
-                    <li><span class="icon solid style6 major fa-notes-medical"></span></li>
-                </ul>
-            </div>
-            <div class="col-6 col-12-medium">
-                <header class="major">
-                    <h2>What we're doing</h2>
-                </header>
-                <p>Case report forms (CRFs) collect patient data in clinical research studies and trials, and represent an information-rich subset of clinical research literature.  However, it is difficult to compare across many different CRFs which all use their own structures. We will use text mining approaches to find important clinical concepts in published CRFs.  These concepts will be used to create a unique open-access dataset that can be used to support biomedical research.</p>
-<p>Supplementary files linked to biomedical publications are rich sources of data, but they are almost impossible to search and find.  We will overcome this gap in biomedical data accessibility by using text mining approaches to provide descriptive metadata for supplementary files.  The metadata will be searchable using SIBiLS, the SIB Literature Services.</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Three -->
-<section class="main style1 special" id="three">
-    <div class="container">
-        <header class="major">
-            <h2>Collaborators</h2>
-        </header>
-        <div class="row gtr-150">
-            <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="./images/Venkata.jpg"/>
-                <h3>Luxembourg</h3>
-                <span><b>Venkata Satagopam</b><br>
-                    Université Du Luxembourg</span>
-                <img class="org-logo" src="images/university-of-luxembourg.svg" />
-            </div>
-            <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="./images/Tim.jpg"/>
-                <h3>UK</h3>
-                <span><b>Tim Beck</b> <br>
-                    University of Nottingham</span>
-                <img class="org-logo" src="images/UoN-Nottingham-Blue.png" />
-            </div>
-            <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="./images/Nona.jpg"/>
-                <h3>France</h3>
-                <span><b>Nona Naderi</b><br>
-                    Université Paris-Saclay</span>
-                <img class="org-logo" src="images/logo-ups.svg" />
-            </div>
-            <div class="col-3 col-12-medium">
-                <img alt="" class="profile-pic" src="./images/Patrick.jpg"/>
-                <h3>Switzerland</h3>
-                <span><b>Patrick Ruch</b><br>
-                    Swiss Institute of Bioinformatics</span>
-                <img class="org-logo" src="images/swiss-logo.svg"/>
+    <!-- Two -->
+    <section class="main style2" id="two">
+        <div class="container">
+            <div class="row gtr-150">
+                <div class="col-6 col-12-medium">
+                    <ul class="major-icons">
+                        <li><span class="icon solid style1 major fa-code"></span></li>
+                        <li><span class="icon solid style2 major fa-heartbeat"></span></li>
+                        <li><span class="icon solid style3 major fa-project-diagram"></span></li>
+                        <li><span class="icon solid style4 major fa-capsules"></span></li>
+                        <li><span class="icon solid style5 major fa-desktop"></span></li>
+                        <li><span class="icon solid style6 major fa-notes-medical"></span></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-12-medium">
+                    <header class="major">
+                        <h2>What we're doing</h2>
+                    </header>
+                    <p>Case report forms (CRFs) collect patient data in clinical research studies and trials, and
+                        represent an information-rich subset of clinical research literature. However, it is difficult
+                        to compare across many different CRFs which all use their own structures. We will use text
+                        mining approaches to find important clinical concepts in published CRFs. These concepts will be
+                        used to create a unique open-access dataset that can be used to support biomedical research.</p>
+                    <p>Supplementary files linked to biomedical publications are rich sources of data, but they are
+                        almost impossible to search and find. We will overcome this gap in biomedical data accessibility
+                        by using text mining approaches to provide descriptive metadata for supplementary files. The
+                        metadata will be searchable using SIBiLS, the SIB Literature Services.</p>
+                </div>
             </div>
         </div>
-        <ul class="actions special">
-            <li><a class="button wide" href="members.html">Meet the Team</a></li>
-        </ul>
-    </div>
-</section>
+    </section>
 
-<!-- Four -->
-<section class="main style2 special" id="four">
-    <div class="container">
-        <header class="major">
-            <h2>Questions?</h2>
-        </header>
-        <p></p>
-        <ul class="actions special">
-            <li><a class="button wide" href="mailto:tim.beck@nottingham.ac.uk">Contact Us</a></li>
-        </ul>
-    </div>
-</section>
+    <!-- Three -->
+    <section class="main style1 special" id="three">
+        <div class="container">
+            <header class="major">
+                <h2>Collaborators</h2>
+            </header>
+            <div class="row gtr-150">
+                <div class="col-3 col-12-medium">
+                    <img alt="" class="profile-pic" src="./images/Venkata.jpg" />
+                    <h3>Luxembourg</h3>
+                    <span><b>Venkata Satagopam</b><br>
+                        Université Du Luxembourg</span>
+                    <img class="org-logo" src="images/university-of-luxembourg.svg" />
+                </div>
+                <div class="col-3 col-12-medium">
+                    <img alt="" class="profile-pic" src="./images/Tim.jpg" />
+                    <h3>UK</h3>
+                    <span><b>Tim Beck</b> <br>
+                        University of Nottingham</span>
+                    <img class="org-logo" src="images/UoN-Nottingham-Blue.png" />
+                </div>
+                <div class="col-3 col-12-medium">
+                    <img alt="" class="profile-pic" src="./images/Nona.jpg" />
+                    <h3>France</h3>
+                    <span><b>Nona Naderi</b><br>
+                        Université Paris-Saclay</span>
+                    <img class="org-logo" src="images/logo-ups.svg" />
+                </div>
+                <div class="col-3 col-12-medium">
+                    <img alt="" class="profile-pic" src="./images/Patrick.jpg" />
+                    <h3>Switzerland</h3>
+                    <span><b>Patrick Ruch</b><br>
+                        Swiss Institute of Bioinformatics</span>
+                    <img class="org-logo" src="images/swiss-logo.svg" />
+                </div>
+            </div>
+            <ul class="actions special">
+                <li><a class="button wide" href="members.html">Meet the Team</a></li>
+            </ul>
+        </div>
+    </section>
 
-<!-- Footer -->
-<section id="footer">
-    <img src="./images/chist-logo.svg"/>
-</section>
+    <!-- Four -->
+    <section class="main style2 special" id="four">
+        <div class="container">
+            <header class="major">
+                <h2>Questions?</h2>
+            </header>
+            <p></p>
+            <ul class="actions special">
+                <li><a class="button wide" href="mailto:tim.beck@nottingham.ac.uk">Contact Us</a></li>
+            </ul>
+        </div>
+    </section>
 
-<!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
+    <!-- Footer -->
+    <section id="footer">
+        <img src="./images/chist-logo.svg" />
+    </section>
 
-<script>
-	/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
-	function myFunction() {
-		var x = document.getElementById("nav");
-		if (x.className === "topnav") {
-			x.className += " responsive";
-		} else {
-			x.className = "topnav";
-		}
-	}
-</script>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
+    <script>
+        /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+        function myFunction() {
+            var x = document.getElementById("nav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
 
 </body>
+
 </html>
