--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <!-- Nav Bar-->
 <div class="topnav" id="nav">
     <a class="active" href="index.html">Home</a>
-    <a href="project.html">Project</a>
-    <a href="team.html">Team</a>
+    <a href="members.html">Team</a>
     <a href="news.html">News</a>
     <a class="icon" href="javascript:void(0);" onclick="myFunction()">
         <i class="fa fa-bars"></i>
