--- a/members.html
+++ b/members.html
@@ -19,6 +19,7 @@
 <div class="topnav" id="nav">
     <a href="index.html">Home</a>
     <a class="active" href="members.html">Team</a>
+    <a href="news.html">News</a>
     <a class="icon" href="javascript:void(0);" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
