Updated navigation for news page

--- a/news.html
+++ b/news.html
@@ -16,275 +16,286 @@
 
 <head>
 
-    <title>FAIRClinical</title>
+  <title>FAIRClinical</title>
 
-    <meta charset="utf-8" />
+  <meta charset="utf-8" />
 
-    <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport" />
+  <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport" />
 
-    <link href="assets/css/main.css" rel="stylesheet" />
+  <link href="assets/css/main.css" rel="stylesheet" />
 
-    <noscript>
+  <noscript>
 
-        <link href="assets/css/noscript.css" rel="stylesheet" />
+    <link href="assets/css/noscript.css" rel="stylesheet" />
 
-    </noscript>
+  </noscript>
 
 </head>
 
 <!-- Nav Bar-->
 
+<!-- Nav Bar-->
 <div class="topnav" id="nav">
-
     <a href="index.html">Home</a>
-
-    <a href="project.html">Project</a>
-
-    <a href="team.html">Team</a>
-
+    <a href="members.html">Team</a>
     <a class="active" href="news.html">News</a>
-
     <a class="icon" href="javascript:void(0);" onclick="myFunction()">
-
         <i class="fa fa-bars"></i>
-
     </a>
-
 </div>
 
 
 
 <body class="is-preload">
 
-    <div class="timeline">
+  <div class="timeline">
 
-        <ul>
+    <ul>
 
-           <!-- News item -->
+      <!-- News item -->
 
-          <li>
+      <li>
 
-            <div class="right_content">
+        <div class="right_content">
 
-              <h2>ISMB/ECCB 2025</h2>
+          <h2>ISMB/ECCB 2025</h2>
 
-              <p>Venkata Satagopam, Tim Beck and Thomas Rowlands attended the ISMB/ECCB 2025 conference in Liverpool, England.  They presented a FAIRClinical poster, designed by Basel Alshaikhdeeb, describing the work underway to structure clinical case report forms into the OMOP common data model.</p>
+          <p>Venkata Satagopam, Tim Beck and Thomas Rowlands attended the ISMB/ECCB 2025 conference in Liverpool,
+            England. They presented a FAIRClinical poster, designed by Basel Alshaikhdeeb, describing the work underway
+            to structure clinical case report forms into the OMOP common data model.</p>
 
-              <img class="timeline-image-small" src="images/FAIRClinical_ismb.jpg" />
+          <img class="timeline-image-small" src="images/FAIRClinical_ismb.jpg" />
 
-            </div>
+        </div>
 
-            <div class="left_content">
+        <div class="left_content">
 
-              <h3>July 2025</h3>
+          <h3>July 2025</h3>
 
-            </div>
+        </div>
 
-          </li>
+      </li>
 
-          <!-- End News Item -->
+      <!-- End News Item -->
 
-          <!-- News item -->
+      <!-- News item -->
 
-          <li>
+      <li>
 
-            <div class="right_content">
+        <div class="right_content">
 
-              <h2>ELIXIR All Hands Meeting</h2>
+          <h2>ELIXIR All Hands Meeting</h2>
 
-              <p>Tim Beck, Venkata Satagopam and Patrick Ruch attended the ELIXIR All Hands Meeting in Thessaloníki, Greece. They presented a FAIRClinical poster describing the work underway to make published clincial case reports and supplmentary data FAIR. The poster is available from <a href="https://doi.org/10.7490/f1000research.1120210.1">F1000Research</a>.</p>
+          <p>Tim Beck, Venkata Satagopam and Patrick Ruch attended the ELIXIR All Hands Meeting in Thessaloníki, Greece.
+            They presented a FAIRClinical poster describing the work underway to make published clincial case reports
+            and supplmentary data FAIR. The poster is available from <a
+              href="https://doi.org/10.7490/f1000research.1120210.1">F1000Research</a>.</p>
 
-              <img class="timeline-image-small" src="images/elixir-logo.png" />
+          <img class="timeline-image-small" src="images/elixir-logo.png" />
 
-            </div>
+        </div>
 
-            <div class="left_content">
+        <div class="left_content">
 
-              <h3>June 2025</h3>
+          <h3>June 2025</h3>
 
-            </div>
+        </div>
 
-          </li>
+      </li>
 
-          <!-- End News Item -->
+      <!-- End News Item -->
 
-          <!-- News item -->
+      <!-- News item -->
 
-          <li>
+      <li>
 
-            <div class="right_content">
+        <div class="right_content">
 
-              <h2>CHIST-ERA Projects Seminar 2025</h2>
+          <h2>CHIST-ERA Projects Seminar 2025</h2>
 
-              <p>Basel Alshaikhdeeb represented FAIRClinical at the CHIST-ERA Projects Seminar in Istanbul, Türkiye.  Basel engaged with researchers and representatives of the research funding organisations to explain the benefits FAIRClinical is bringing for open and FAIR data. </p>
+          <p>Basel Alshaikhdeeb represented FAIRClinical at the CHIST-ERA Projects Seminar in Istanbul, Türkiye. Basel
+            engaged with researchers and representatives of the research funding organisations to explain the benefits
+            FAIRClinical is bringing for open and FAIR data. </p>
 
-              <img class="timeline-image-small" src="images/chist-logo.svg" />
+          <img class="timeline-image-small" src="images/chist-logo.svg" />
 
-            </div>
+        </div>
 
-            <div class="left_content">
+        <div class="left_content">
 
-              <h3>April 2025</h3>
+          <h3>April 2025</h3>
 
-            </div>
+        </div>
 
-          </li>
+      </li>
 
-          <!-- End News Item -->
+      <!-- End News Item -->
 
-          <!-- News item -->
+      <!-- News item -->
 
-          <li>
+      <li>
 
-            <div class="right_content">
+        <div class="right_content">
 
-              <h2>FAIRClinical 1st Annual Meeting</h2>
+          <h2>FAIRClinical 1st Annual Meeting</h2>
 
-              <p>The FAIRClinical consortium met at the University of Luxembourg for the project’s 1st Annual Meeting.  Across the two-day meeting, consortium members had the opportunity to reconnect since meeting in Paris twelve months earlier, reflect on progress made over the past year, and engage in discussions about the future direction of the project. </p>
+          <p>The FAIRClinical consortium met at the University of Luxembourg for the project’s 1st Annual Meeting.
+            Across the two-day meeting, consortium members had the opportunity to reconnect since meeting in Paris
+            twelve months earlier, reflect on progress made over the past year, and engage in discussions about the
+            future direction of the project. </p>
 
-              <img class="timeline-image" src="images/luxembourg_meetup.jpg" />
+          <img class="timeline-image" src="images/luxembourg_meetup.jpg" />
 
-            </div>
+        </div>
 
-            <div class="left_content">
+        <div class="left_content">
 
-              <h3>March 2025</h3>
+          <h3>March 2025</h3>
 
-            </div>
+        </div>
 
-          </li>
+      </li>
 
-          <!-- End News Item -->
+      <!-- End News Item -->
 
-          <!-- News item -->
+      <!-- News item -->
 
-          <li>
+      <li>
 
-            <div class="right_content">
+        <div class="right_content">
 
-              <h2>BioHackathon Europe</h2>
+          <h2>BioHackathon Europe</h2>
 
-              <p>Tim Beck, Venkata Satagopam, Basel Alshaikhdeeb and Thomas Rowlands attended BioHackathon Europe in Barcelona, Spain.  They led a project aligned to the objectives of FAIRClinical called Structuring Clinical Reports into OMOP Common Data Model. Great progress was made after four days of intensive hacking (cut short by one day due to a severe storm!) that will accelerate the FAIRClinical project’s technical developments. </p>
+          <p>Tim Beck, Venkata Satagopam, Basel Alshaikhdeeb and Thomas Rowlands attended BioHackathon Europe in
+            Barcelona, Spain. They led a project aligned to the objectives of FAIRClinical called Structuring Clinical
+            Reports into OMOP Common Data Model. Great progress was made after four days of intensive hacking (cut short
+            by one day due to a severe storm!) that will accelerate the FAIRClinical project’s technical developments.
+          </p>
 
-              <img class="timeline-image" src="images/biohackathon_2024.jpg" />
+          <img class="timeline-image" src="images/biohackathon_2024.jpg" />
 
-              <p class="image-credit">Credit: <a href="https://www.flickr.com/photos/elixir-europe/54137022083/in/album-72177720321912863">Elixir Europe</a></p>
+          <p class="image-credit">Credit: <a
+              href="https://www.flickr.com/photos/elixir-europe/54137022083/in/album-72177720321912863">Elixir
+              Europe</a></p>
 
-            </div>
+        </div>
 
-            <div class="left_content">
+        <div class="left_content">
 
-              <h3>November 2024</h3>
+          <h3>November 2024</h3>
 
-            </div>
+        </div>
 
-          </li>
+      </li>
 
-          <!-- End News Item -->
+      <!-- End News Item -->
 
-          <!-- News item -->
+      <!-- News item -->
 
-          <li>
+      <li>
 
-            <div class="right_content">
+        <div class="right_content">
 
-              <h2>ELIXIR All Hands Meeting</h2>
+          <h2>ELIXIR All Hands Meeting</h2>
 
-              <p>Venkata Satagopam presented the FAIRClinical project at the ELIXIR All Hands Meeting in Uppsala, Sweden.  Venkata explained to a text mining audience how the outcomes from the project will support the life sciences research data community. </p>
+          <p>Venkata Satagopam presented the FAIRClinical project at the ELIXIR All Hands Meeting in Uppsala, Sweden.
+            Venkata explained to a text mining audience how the outcomes from the project will support the life sciences
+            research data community. </p>
 
-              <img class="timeline-image-small" src="images/elixir-logo.png" />
+          <img class="timeline-image-small" src="images/elixir-logo.png" />
 
-            </div>
+        </div>
 
-            <div class="left_content">
+        <div class="left_content">
 
-              <h3>June 2024</h3>
+          <h3>June 2024</h3>
 
-            </div>
+        </div>
 
-          </li>
+      </li>
 
-          <!-- End News Item -->
+      <!-- End News Item -->
 
-          <!-- News item -->
+      <!-- News item -->
 
-          <li>
+      <li>
 
-            <div class="right_content">
+        <div class="right_content">
 
-              <h2>FAIRClinical Kick Off Meeting</h2>
+          <h2>FAIRClinical Kick Off Meeting</h2>
 
-              <p>The FAIRClinical consortium met for the project’s kick off meeting at the Université Paris-Saclay, France. The two days were filled with presentations, discussions and much cross-team collaboration. </p>
+          <p>The FAIRClinical consortium met for the project’s kick off meeting at the Université Paris-Saclay, France.
+            The two days were filled with presentations, discussions and much cross-team collaboration. </p>
 
-              <img class="timeline-image" src="images/paris-saclay-meetup.jpg" />
+          <img class="timeline-image" src="images/paris-saclay-meetup.jpg" />
 
-            </div>
+        </div>
 
-            <div class="left_content">
+        <div class="left_content">
 
-              <h3>March 2024</h3>
+          <h3>March 2024</h3>
 
-            </div>
+        </div>
 
-          </li>
+      </li>
 
-          <!-- End News Item -->
+      <!-- End News Item -->
 
-          <div style="clear:both;"></div>
+      <div style="clear:both;"></div>
 
-        </ul>
+    </ul>
 
-      </div>
+  </div>
 
 
 
-    <!-- Footer -->
+  <!-- Footer -->
 
-    <section id="footer">
+  <section id="footer">
 
-        <img src="./images/chist-logo.svg" />
+    <img src="./images/chist-logo.svg" />
 
-    </section>
+  </section>
 
 
 
-    <!-- Scripts -->
+  <!-- Scripts -->
 
-    <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
 
-    <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/jquery.scrolly.min.js"></script>
 
-    <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
 
-    <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
 
-    <script src="assets/js/util.js"></script>
+  <script src="assets/js/util.js"></script>
 
-    <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 
 
 
-    <script>
+  <script>
 
-        /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+    /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
 
-        function myFunction() {
+    function myFunction() {
 
-            var x = document.getElementById("nav");
+      var x = document.getElementById("nav");
 
-            if (x.className === "topnav") {
+      if (x.className === "topnav") {
 
-                x.className += " responsive";
+        x.className += " responsive";
 
-            } else {
+      } else {
 
-                x.className = "topnav";
+        x.className = "topnav";
 
-            }
+      }
 
-        }
+    }
 
-    </script>
+  </script>
 
 
 
