--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <a class="active" href="index.html">Home</a>
     <a href="members.html">Team</a>
     <a href="news.html">News</a>
+    <a href="deliverables.html">Deliverables</a>
+    <a href="publications.html">Publications</a>
     <a class="icon" href="javascript:void(0);" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
