--- a/news.html
+++ b/news.html
@@ -39,6 +39,8 @@
     <a href="index.html">Home</a>
     <a href="members.html">Team</a>
     <a class="active" href="news.html">News</a>
+    <a href="deliverables.html">Deliverables</a>
+    <a href="publications.html">Publications</a>
     <a class="icon" href="javascript:void(0);" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
